gitops/stuff/prod-mtls-ca/misc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-http
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 0
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: cgr.dev/chainguard/nginx:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        securityContext:
          rnuAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: conf
          mountPath: /etc/nginx/conf.d
        - name: root
          mountPath: /usr/share/nginx/html/
        - name: mtls-buc-lenovo
          mountPath: /usr/share/nginx/html/buc-lenovo
      volumes:
      - name: conf
        configMap:
          name: nginx-config
      - name: root
        emptyDir: {}
      - name: mtls-buc-lenovo
        secret:
          secretName: mtls-buc-lenovo

---
kind: Service
apiVersion: v1
metadata:
  name: cert-http
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-http
spec:
  rules:
  - host: cert-http.10.0.0.16.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cert-http
            port:
              name: http
